--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,8 @@ set(CMAKE_CXX_STANDARD 17)
 # Packages
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
-find_package(glfw3  REQUIRED)
+find_package(glfw3 REQUIRED)
 
 # Subdirectories
+add_subdirectory(src)
 add_subdirectory(examples)
