--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,4 +8,9 @@ add_executable(
 target_include_directories(Kedarium PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 # Libraries
-target_link_libraries(example PRIVATE Kedarium GL GLEW glfw)
+target_link_libraries(example PRIVATE Kedarium GLEW glfw)
+if (APPLE)
+  target_link_libraries(example PRIVATE "-framework OpenGL")
+else()
+  target_link_libraries(example PRIVATE GL)
+endif()
